--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">DOLLA</a>
+          <a class="navbar-brand text-white" href="#">dolla</a>
           <button
             class="navbar-toggler"
             type="button"
