--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="#">dolla</a>
           <button
@@ -48,12 +48,34 @@
                 <a class="nav-link" href="#">Sign up</a>
               </li>
             </ul>
-
             <button class="btn btn-success">Sign in</button>
           </div>
         </div>
       </nav>
     </header>
+    <!-- Hero -->
+    <div class="hero">
+      <video autoplay loop muted>
+        <source src="./images/1.mp4" type="video/mp4" />
+      </video>
+      <div class="hero-content">
+        <h2>Virtual Banking Made Easy</h2>
+        <h6>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mi sem, ullamcorper vitae vestibulum eu, tempus
+          sit amet lectus. Quisque nisi nibh, commodo in sodales id, volutpat sed ex. Nam facilisis vestibulum lorem
+        </h6>
+        <a href="#" class="btn btn-success">Get Started</a>
+      </div>
+    </div>
+    <!-- About -->
+
+    <!-- Discover -->
+
+    <!-- Service -->
+
+    <!-- Sign up -->
+
+    <!-- Footer -->
 
     <!-- Bootstrap script -->
     <script
