Styling Hero Section

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
       </nav>
     </header>
     <!-- Hero -->
-    <div class="hero">
+    <section class="hero">
       <video autoplay loop muted>
         <source src="./images/1.mp4" type="video/mp4" />
       </video>
       <div class="hero-content">
-        <h2>Virtual Banking Made Easy</h2>
-        <h6>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mi sem, ullamcorper vitae vestibulum eu, tempus
-          sit amet lectus. Quisque nisi nibh, commodo in sodales id, volutpat sed ex. Nam facilisis vestibulum lorem
-        </h6>
+        <h1 class="display-5 fw-bold">Virtual Banking Made Easy</h1>
+        <p class="my-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsam Eum tempore delectus beatae officiis est
+          perferendis.
+        </p>
         <a href="#" class="btn btn-success">Get Started</a>
       </div>
-    </div>
+    </section>
     <!-- About -->
 
     <!-- Discover -->
