--- a/index.html
+++ b/index.html
@@ -69,18 +69,20 @@
     </section>
     <!-- About -->
     <section class="about">
-      <div class="row">
-        <div class="about-info">
-          <h6>PREMIUM BANK</h6>
-          <h1>Unlimited Transactions With Zero Fees</h1>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
-            Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
-          </p>
-          <a href="#" class="btn btn-success">Learn more</a>
-        </div>
-        <div class="about-img">
-          <img src="./images/1.svg" alt="about image" />
+      <div class="container pb-5">
+        <div class="row align-items-center">
+          <div class="about-info col-md-6">
+            <h6>PREMIUM BANK</h6>
+            <h1>Unlimited Transactions With Zero Fees</h1>
+            <p class="my-3">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
+              Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
+            </p>
+            <a href="#" class="btn btn-success">Learn more</a>
+          </div>
+          <div class="about-img col-md-6">
+            <img class="w-100" src="./images/1.svg" alt="about image" />
+          </div>
         </div>
       </div>
     </section>
