--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <video autoplay loop muted>
         <source src="./images/1.mp4" type="video/mp4" />
       </video>
-      <div class="hero-content">
+      <div class="hero-content mt-5">
         <h1 class="display-5 fw-bold">Virtual Banking Made Easy</h1>
         <p class="my-4">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsam Eum tempore delectus beatae officiis est
@@ -87,6 +87,24 @@
       </div>
     </section>
     <!-- Discover -->
+    <section class="discover">
+      <div class="container py-5">
+        <div class="row align-items-center">
+          <div class="discover-img col-md-6">
+            <img class="w-75" src="./images/2.png" alt="discover image" />
+          </div>
+          <div class="discover-info col-md-6">
+            <h6>UNLIMITED ACCESS</h6>
+            <h1>Login to yout account at any time</h1>
+            <p class="my-3">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
+              Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
+            </p>
+            <a href="#" class="btn btn-dark">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Service -->
 
