--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Hero -->
     <section class="hero">
       <video autoplay loop muted>
-        <source src="./images/1.mp4" type="video/mp4" />
+        <source src="./images/3.mp4" type="video/mp4" />
       </video>
       <div class="hero-content mt-5">
         <h1 class="display-5 fw-bold">Virtual Banking Made Easy</h1>
@@ -107,6 +107,28 @@
     </section>
 
     <!-- Service -->
+    <section class="services container">
+      <div class="header">
+        <h1>Our Services</h1>
+      </div>
+      <div class="cards">
+        <div class="service p-5 text-center col-md-4">
+          <img class="w-50" src="./images/2.png" alt="2" />
+          <h3>Reduce expences</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
+        </div>
+        <div class="service p-5 text-center col-md-4">
+          <img class="w-50" src="./images/3.png" alt="3" />
+          <h3>Reduce expences</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
+        </div>
+        <div class="service p-5 text-center col-md-4">
+          <img class="w-50" src="./images/4.png" alt="4" />
+          <h3>Reduce expences</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Sign up -->
 
