--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Dolla</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -88,43 +89,41 @@
     </section>
     <!-- Discover -->
     <section class="discover">
-      <div class="container py-5">
-        <div class="row align-items-center">
-          <div class="discover-img col-md-6">
-            <img class="w-75" src="./images/2.png" alt="discover image" />
-          </div>
-          <div class="discover-info col-md-6">
-            <h6>UNLIMITED ACCESS</h6>
-            <h1>Login to yout account at any time</h1>
-            <p class="my-3">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
-              Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
-            </p>
-            <a href="#" class="btn btn-dark">Learn more</a>
-          </div>
+      <div class="row align-items-center">
+        <div class="discover-img col-md-6">
+          <img class="w-75" src="./images/2.png" alt="discover image" />
+        </div>
+        <div class="discover-info col-md-6">
+          <h6>UNLIMITED ACCESS</h6>
+          <h1>Login to yout account at any time</h1>
+          <p class="my-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
+            Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
+          </p>
+          <a href="#" class="btn btn-dark">Learn more</a>
         </div>
       </div>
     </section>
 
     <!-- Service -->
-    <section class="services container">
+    <section class="services">
       <div class="header">
         <h1>Our Services</h1>
       </div>
       <div class="cards">
-        <div class="service p-5 text-center col-md-4">
-          <img class="w-50" src="./images/2.png" alt="2" />
-          <h3>Reduce expences</h3>
+        <div class="service py-5 px-3 text-center col-md-4">
+          <img class="w-75" src="./images/1.png" alt="2" />
+          <h5>Reduce Expences</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
         </div>
-        <div class="service p-5 text-center col-md-4">
-          <img class="w-50" src="./images/3.png" alt="3" />
-          <h3>Reduce expences</h3>
+        <div class="service py-5 px-3 text-center col-md-4">
+          <img class="w-75" src="./images/2.png" alt="3" />
+          <h5>Virtual Offices</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
         </div>
-        <div class="service p-5 text-center col-md-4">
-          <img class="w-50" src="./images/4.png" alt="4" />
-          <h3>Reduce expences</h3>
+        <div class="service py-5 px-3 text-center col-md-4">
+          <img class="w-75" src="./images/3.png" alt="4" />
+          <h5>Premium Benifites</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
         </div>
       </div>
