--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
         <h1>Our Services</h1>
       </div>
       <div class="cards">
-        <div class="service py-5 px-3 text-center col-md-4">
+        <div class="service py-5 px-3 text-center col-md-4 col-sm-12">
           <img class="w-75" src="./images/1.png" alt="2" />
           <h5>Reduce Expences</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
         </div>
-        <div class="service py-5 px-3 text-center col-md-4">
+        <div class="service py-5 px-3 text-center col-md-4 col-sm-12">
           <img class="w-75" src="./images/2.png" alt="3" />
           <h5>Virtual Offices</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
         </div>
-        <div class="service py-5 px-3 text-center col-md-4">
+        <div class="service py-5 px-3 text-center col-md-4 col-sm-12">
           <img class="w-75" src="./images/3.png" alt="4" />
           <h5>Premium Benifites</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing eli Odio quis.</p>
@@ -130,7 +130,24 @@
     </section>
 
     <!-- Sign up -->
-
+    <section class="signup">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="signup-info col-md-6">
+            <h6>JOIN OUR TEAM</h6>
+            <h1>Creating an account is extremely easy</h1>
+            <p class="my-3">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde esse autem porro quaerat architecto hic rem
+              Fuga illum molestias inventore maxime aperiam Voluptate expedita hic distinctio suscipit nemo odit quis
+            </p>
+            <a href="#" class="btn btn-dark">Learn more</a>
+          </div>
+          <div class="signup-img col-md-6">
+            <img class="w-100" src="./images/4.png" alt="about image" />
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer -->
 
     <!-- Bootstrap script -->
