--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Discover</a>
+                <a class="nav-link" href="#discover">Discover</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Service</a>
+                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sign up</a>
+                <a class="nav-link" href="#signup">Sign up</a>
               </li>
             </ul>
             <button class="btn btn-success">Sign in</button>
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!-- About -->
-    <section class="about">
+    <section class="about" id="about">
       <div class="container pb-5">
         <div class="row align-items-center">
           <div class="about-info col-md-6">
@@ -88,7 +88,7 @@
       </div>
     </section>
     <!-- Discover -->
-    <section class="discover">
+    <section class="discover" id="discover">
       <div class="row align-items-center">
         <div class="discover-img col-md-6">
           <img class="w-75" src="./images/2.png" alt="discover image" />
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Service -->
-    <section class="services">
+    <section class="services" id="services">
       <div class="header">
         <h1>Our Services</h1>
       </div>
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Sign up -->
-    <section class="signup">
+    <section class="signup" id="signup">
       <div class="container">
         <div class="row align-items-center">
           <div class="signup-info col-md-6">
