--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#navbarSupportedContent">
     <header>
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
